[package]
name = "show-dlg"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^ 0.1.2"
log = "^ 0.4"
simplelog = "^ 0.5"
structopt = "^ 0.2"
vulkano = "^ 0.12"
vulkano-shaders = "^ 0.12"
vulkano-win = "^ 0.12"
winit = "^ 0.19"
camera = { path = "../../libs/renderer/camera" }
dlg = { path = "../../libs/dlg" }
input = { path = "../../libs/input" }
legacy_render = { path = "../../libs/legacy_render" }
omnilib = { path = "../../libs/omnilib" }
pal = { path = "../../libs/pal" }
text = { path = "../../libs/renderer/text" }
window = { path = "../../libs/window" }