[package]
name = "show-dlg"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^ 0.1.2"
log = "^ 0.4"
simplelog = "^ 0.5"
structopt = "^ 0.2"
vulkano = "^ 0.14"
vulkano-shaders = "^ 0.14"
vulkano-win = "^ 0.14"
winit = "^ 0.19"
camera = { path = "../../libs/render-vulkano/common/camera" }
dlg = { path = "../../libs/dlg" }
input = { path = "../../libs/render-vulkano/common/input" }
legacy_render = { path = "../../libs/legacy_render" }
omnilib = { path = "../../libs/omnilib" }
pal = { path = "../../libs/pal" }
text = { path = "../../libs/render-vulkano/draw/text" }
window = { path = "../../libs/render-vulkano/common/window" }