[package]
name = "show-mm"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^ 0.1.2"
image = "^ 0.21"
log = "^ 0.4"
nalgebra = "^ 0.20"
rand = "^ 0.3"
simplelog = "^ 0.5"
structopt = "^ 0.2"
absolute_unit = { path = "../../libs/nitrogen/sim/absolute_unit" }
atmosphere = { path = "../../libs/nitrogen/wgpu-buffer/atmosphere" }
camera = { path = "../../libs/nitrogen/sim/camera" }
command = { path = "../../libs/nitrogen/system/command" }
fnt = { path = "../../libs/fnt" }
frame_graph = { path = "../../libs/nitrogen/system/frame_graph" }
fullscreen = { path = "../../libs/nitrogen/wgpu-buffer/fullscreen" }
galaxy = { path = "../../libs/galaxy" }
geodesy = { path = "../../libs/nitrogen/sim/geodesy" }
global_data = { path = "../../libs/nitrogen/wgpu-buffer/global_data" }
gpu = { path = "../../libs/nitrogen/system/gpu" }
input = { path = "../../libs/nitrogen/system/input" }
lib = { path = "../../libs/lib" }
mm = { path = "../../libs/mm" }
omnilib = { path = "../../libs/omnilib" }
orrery = { path = "../../libs/nitrogen/sim/orrery" }
physical_constants = { path = "../../libs/nitrogen/sim/physical_constants" }
screen_text = { path = "../../libs/nitrogen/wgpu-render/screen_text" }
shape = { path = "../../libs/render-wgpu/render_pass/shape" }
shape_instance = { path = "../../libs/render-wgpu/buffer/shape_instance" }
skybox = { path = "../../libs/nitrogen/wgpu-render/skybox" }
stars = { path = "../../libs/nitrogen/wgpu-buffer/stars" }
t2_buffer = { path = "../../libs/render-wgpu/buffer/t2_buffer" }
t2_terrain = { path = "../../libs/render-wgpu/render_pass/t2_terrain" }
text_layout = { path = "../../libs/nitrogen/wgpu-buffer/text_layout" }
xt = { path = "../../libs/xt" }
