[package]
name = "show-sh-raw"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^ 0.1.2"
image = "^ 0.21"
log = "^ 0.4"
nalgebra = "^ 0.18"
simplelog = "^ 0.5"
structopt = "^ 0.2"
vulkano = "^ 0.12"
vulkano-shaders = "^ 0.12"
vulkano-win = "^ 0.12"
winit = "^ 0.19"
asset = { path = "../../libs/asset" }
camera = { path = "../../libs/renderer/camera" }
lib = { path = "../../libs/lib" }
mm = { path = "../../libs/mm" }
omnilib = { path = "../../libs/omnilib" }
pic = { path = "../../libs/pic" }
pal = { path = "../../libs/pal" }
legacy_render = { path = "../../libs/legacy_render" }
sh = { path = "../../libs/sh" }
text = { path = "../../libs/renderer/text" }
window = { path = "../../libs/window" }
