[package]
name = "show-sh-raw"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
codepage-437 = "^ 0.1.0"
failure = "^ 0.1.2"
image = "^ 0.21"
lazy_static = ">= 1"
log = "^ 0.4"
nalgebra = "^ 0.20"
rusttype = "^ 0.7"
simplelog = "^ 0.5"
smallvec = "^ 0.6"
structopt = "^ 0.2"
unicase = "^ 2.4"
vulkano = "^ 0.14"
vulkano-shaders = "^ 0.14"
vulkano-win = "^ 0.14"
winit = "^ 0.19"
asset = { path = "../../libs/asset" }
camera = { path = "../../libs/nitrogen/sim/camera" }
fnt = { path = "../../libs/fnt" }
geometry = { path = "../../libs/nitrogen/sim/geometry" }
i386 = { path = "../../libs/i386" }
lib = { path = "../../libs/lib" }
mm = { path = "../../libs/mm" }
omnilib = { path = "../../libs/omnilib" }
pic = { path = "../../libs/pic" }
pal = { path = "../../libs/pal" }
sh = { path = "../../libs/sh" }

[dev-dependencies]
approx = "^ 0.3"
simplelog = "^ 0.5"
