[package]
name = "show-sh"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
csscolorparser.workspace = true
env_logger.workspace = true
once_cell.workspace = true
platform-dirs.workspace = true
structopt.workspace = true
terminal_size.workspace = true
winit.workspace = true
absolute_unit = { path = "../../libs/nitrogen/util/absolute_unit" }
animate = { path = "../../libs/nitrogen/sim/animate" }
asset_loader = { path = "../../libs/game/asset_loader" }
atmosphere = { path = "../../libs/nitrogen/wgpu-buffer/atmosphere" }
camera = { path = "../../libs/nitrogen/sim/camera" }
catalog = { path = "../../libs/nitrogen/system/catalog" }
composite = { path = "../../libs/nitrogen/wgpu-buffer/composite" }
event_mapper = { path = "../../libs/nitrogen/sim/event_mapper" }
fa_vehicle = { path = "../../libs/game/fa_vehicle" }
flight_dynamics = { path = "../../libs/game/flight_dynamics" }
fnt = { path = "../../libs/asset/fnt" }
font_fnt = { path = "../../libs/wgpu-buffer/font_fnt" }
fullscreen = { path = "../../libs/nitrogen/wgpu-buffer/fullscreen" }
geodesy = { path = "../../libs/nitrogen/util/geodesy" }
geometry = { path = "../../libs/nitrogen/util/geometry" }
global_data = { path = "../../libs/nitrogen/wgpu-buffer/global_data" }
gpu = { path = "../../libs/nitrogen/system/gpu" }
input = { path = "../../libs/nitrogen/system/input" }
instrument_envelope = { path = "../../libs/wgpu-buffer/instrument_envelope" }
lib = { path = "../../libs/asset/lib" }
marker = { path = "../../libs/nitrogen/wgpu-buffer/marker" }
measure = { path = "../../libs/nitrogen/sim/measure" }
mmm = { path = "../../libs/asset/mmm" }
nitrous = { path = "../../libs/nitrogen/util/nitrous" }
orrery = { path = "../../libs/nitrogen/sim/orrery" }
pal = { path = "../../libs/asset/pal" }
physical_constants = { path = "../../libs/nitrogen/util/physical_constants" }
player = { path = "../../libs/game/player" }
runtime = { path = "../../libs/nitrogen/util/runtime" }
shape = { path = "../../libs/wgpu-buffer/shape" }
stars = { path = "../../libs/nitrogen/wgpu-buffer/stars" }
t2_terrain = { path = "../../libs/wgpu-buffer/t2_terrain" }
terrain = { path = "../../libs/nitrogen/wgpu-buffer/terrain" }
tracelog = { path = "../../libs/nitrogen/system/tracelog" }
ui = { path = "../../libs/nitrogen/wgpu-buffer/ui" }
vehicle = { path = "../../libs/nitrogen/sim/vehicle" }
widget = { path = "../../libs/nitrogen/wgpu-buffer/widget" }
window = { path = "../../libs/nitrogen/system/window" }
world = { path = "../../libs/nitrogen/wgpu-buffer/world" }
xt = { path = "../../libs/asset/xt" }
