[package]
name = "show-sh"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
csscolorparser.workspace = true
env_logger.workspace = true
once_cell.workspace = true
structopt.workspace = true
terminal_size.workspace = true
winit.workspace = true
# libs
absolute_unit.workspace = true
animate.workspace = true
asset_loader.workspace = true
atmosphere.workspace = true
camera.workspace = true
catalog.workspace = true
composite.workspace = true
event_mapper.workspace = true
fa_vehicle.workspace = true
flight_dynamics.workspace = true
fnt.workspace = true
font_fnt.workspace = true
fullscreen.workspace = true
geodesy.workspace = true
geometry.workspace = true
global_data.workspace = true
gpu.workspace = true
input.workspace = true
instrument_envelope.workspace = true
lib.workspace = true
marker.workspace = true
measure.workspace = true
mmm.workspace = true
nitrous.workspace = true
orrery.workspace = true
pal.workspace = true
physical_constants.workspace = true
player.workspace = true
runtime.workspace = true
shape.workspace = true
stars.workspace = true
t2_terrain.workspace = true
terrain.workspace = true
tracelog.workspace = true
ui.workspace = true
vehicle.workspace = true
widget.workspace = true
window.workspace = true
world.workspace = true
xt.workspace = true
