[package]
name = "show-sky"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "^ 0.4"
failure = "^ 0.1.2"
image = "^ 0.21"
log = "^ 0.4"
nalgebra = "^ 0.20"
simplelog = "^ 0.5"
structopt = "^ 0.2"

absolute_unit = { path = "../../libs/nitrogen/sim/absolute_unit" }
camera = { path = "../../libs/nitrogen/sim/camera" }
command = { path = "../../libs/nitrogen/system/command" }
frame_graph = { path = "../../libs/nitrogen/system/frame_graph" }
geodesy = { path = "../../libs/nitrogen/sim/geodesy" }
gpu = { path = "../../libs/nitrogen/system/gpu" }
input = { path = "../../libs/nitrogen/system/input" }
orrery = { path = "../../libs/nitrogen/sim/orrery" }
physical_constants = { path = "../../libs/nitrogen/sim/physical_constants" }

atmosphere = { path = "../../libs/render-wgpu/buffer/atmosphere" }
fullscreen = { path = "../../libs/render-wgpu/buffer/fullscreen" }
global_data = { path = "../../libs/render-wgpu/buffer/global_data" }
screen_text = { path = "../../libs/render-wgpu/render_pass/screen_text" }
skybox = { path = "../../libs/render-wgpu/render_pass/skybox" }
stars = { path = "../../libs/render-wgpu/buffer/stars" }
terrain = { path = "../../libs/render-wgpu/render_pass/terrain" }
terrain_geo = { path = "../../libs/render-wgpu/buffer/terrain_geo" }
text_layout = { path = "../../libs/render-wgpu/buffer/text_layout" }
