[package]
name = "show-sky"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "^ 0.4"
failure = "^ 0.1.2"
image = "^ 0.21"
log = "^ 0.4"
nalgebra = "^ 0.20"
simplelog = "^ 0.5"
structopt = "^ 0.2"

absolute_unit = { path = "../../libs/nitrogen/sim/absolute_unit" }
atmosphere = { path = "../../libs/nitrogen/wgpu-buffer/atmosphere" }
camera = { path = "../../libs/nitrogen/sim/camera" }
command = { path = "../../libs/nitrogen/system/command" }
frame_graph = { path = "../../libs/nitrogen/system/frame_graph" }
fullscreen = { path = "../../libs/nitrogen/wgpu-buffer/fullscreen" }
geodesy = { path = "../../libs/nitrogen/sim/geodesy" }
global_data = { path = "../../libs/nitrogen/wgpu-buffer/global_data" }
gpu = { path = "../../libs/nitrogen/system/gpu" }
input = { path = "../../libs/nitrogen/system/input" }
orrery = { path = "../../libs/nitrogen/sim/orrery" }
physical_constants = { path = "../../libs/nitrogen/sim/physical_constants" }
screen_text = { path = "../../libs/nitrogen/wgpu-render/screen_text" }
skybox = { path = "../../libs/nitrogen/wgpu-render/skybox" }
stars = { path = "../../libs/nitrogen/wgpu-buffer/stars" }
terrain = { path = "../../libs/nitrogen/wgpu-render/terrain" }
terrain_geo = { path = "../../libs/nitrogen/wgpu-buffer/terrain_geo" }
text_layout = { path = "../../libs/nitrogen/wgpu-buffer/text_layout" }
