[package]
name = "t2_explorer"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]

[dependencies]
nalgebra = "0.16"
clap = "= 2.32"
failure = ">= 0.1.2"
vulkano = "^ 0.11.1"
vulkano-shaders = "^ 0.11.1"
vulkano-win = "^ 0.11.1"
winit = "^ 0.18"
lay = { path = "../../libs/lay" }
omnilib = { path = "../../libs/omnilib" }
pal = { path = "../../libs/pal" }
render = { path = "../../libs/render" }
t2 = { path = "../../libs/t2" }
window = { path = "../../libs/window" }
