[package]
name = "command"
description = "Command system and keybinding."
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
log = "^ 0.4"
failure = "^ 0.1.2"
lazy_static = "^ 1.3"
smallvec = "^ 0.6"
unicase = "^ 2.4"
winit = { git = "https://github.com/rust-windowing/winit", rev = "6f5e7e170cd7bd9be1bb302dd91ebd906d29cfe1" }
