[package]
name = "dlg"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = ">= 0.1.2"
ansi = { path = "../ansi" }
packed_struct = { path = "../packed_struct" }
peff = { path = "../peff" }
reverse = { path = "../reverse" }

[dev-dependencies]
omnilib = { path = "../omnilib" }